[gd_scene load_steps=4 format=3 uid="uid://dproxk1e7cqri"]

[ext_resource type="Texture2D" uid="uid://lb57i7rki7x" path="res://Assets/Sprites/Gameplay/orb_holder.png" id="1_4bkdq"]
[ext_resource type="Script" path="res://Scenes/Gameplay/OrbHolder.gd" id="1_tvwbp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lx2ne"]
radius = 8.0

[node name="OrbHolder" type="Sprite2D"]
texture = ExtResource("1_4bkdq")
script = ExtResource("1_tvwbp")

[node name="HoldTimer" type="Timer" parent="."]
one_shot = true

[node name="Collision" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_lx2ne")
target_position = Vector2(0, 0)
collision_mask = 4

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.34
one_shot = true

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 800.0
bus = &"SFX"

[connection signal="timeout" from="HoldTimer" to="." method="release"]
